--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AluraViagens">
+        <activity android:name=".ui.activity.PagamentoActivity"></activity>
         <activity android:name=".ui.activity.ListaPacotesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.ResumoPacoteActivity"></activity>
+        <activity android:name=".ui.activity.ResumoPacoteActivity" />
     </application>
 
 </manifest>
