--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AluraViagens">
-        <activity android:name=".ui.activity.PagamentoActivity"></activity>
+        <activity android:name=".ui.activity.ResumoCompraActivity"></activity>
+        <activity android:name=".ui.activity.PagamentoActivity" />
         <activity android:name=".ui.activity.ListaPacotesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
